testsuite/veronac/codegen/compile-fail/main-method-has-generics.out/stderr.txt
main-method-has-generics.verona:5:3: error: Method 'main' has an invalid signature
  main[X]() { }
  ^~~~
1 error generated
